<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <com.swm.chart.Oscilloscope
        android:id="@+id/swm_ecg_breath_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:zeroPosition="middle"
        app:lineColor="@color/swm_ecg"
        app:lineSize="1dp"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        />

    <com.swm.stuff.view.HeartRateView
        android:id="@+id/swm_heart_rate_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_init"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintVertical_bias="0.028"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/swm_white"/>

    <com.swm.stuff.view.HrvView
        android:id="@+id/swm_hrv_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:formatString="@string/swm_my_hrv"
        android:text="@string/swm_init"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintVertical_bias="0.044"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swm_heart_rate_view"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/swm_white"/>

    <com.swm.stuff.view.StressView
        android:id="@+id/swm_stress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:formatString="@string/swm_my_stress"
        android:text="@string/swm_init"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintVertical_bias="0.032"
        app:layout_constraintLeft_toRightOf="@+id/swm_heart_rate_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/swm_white"/>

    <com.swm.stuff.view.PhyAgeView
        android:id="@+id/swm_phy_age_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:formatString="@string/swm_my_phy_age"
        android:text="@string/swm_init"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintVertical_bias="0.036"
        app:layout_constraintLeft_toRightOf="@+id/swm_hrv_view"
        app:layout_constraintTop_toBottomOf="@+id/swm_stress_view"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/swm_white"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
