<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swm.sdk.HeartActivity">
    <com.swm.view.HeartRateView
        android:id="@+id/swm_heart_rate_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_my_heart_rate"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/swm_ecg_breath_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintVertical_bias="0.352" />
    <com.swm.view.HrvView
        android:id="@+id/swm_hrv_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_my_hrv"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/swm_ecg_breath_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/swm_heart_rate_view"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintVertical_bias="0.346" />

    <com.swm.chart.SwmLineChart
        android:id="@+id/swm_ecg_breath_view"
        android:layout_width="350dp"
        android:layout_height="225dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639"
        app:layout_constraintHorizontal_bias="0.239" />

    <com.swm.view.RecordButton
        android:id="@+id/swm_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_record"
        android:background="@drawable/swm_cta_button"
        android:textColor="@color/swm_white"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/swm_ecg_breath_view"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintVertical_bias="0.906" />
</android.support.constraint.ConstraintLayout>
