<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swm.engineering.MainActivity">

    <!-- ECG and Breath view -->
    <include
        android:id="@+id/swm_heart_view"
        layout="@layout/heart_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="visible"/>

    <!-- Sensor view-->
    <include
        android:id="@+id/swm_motion_view"
        layout="@layout/motion_view"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        />

    <!-- Device view-->
    <include
        android:id="@+id/swm_device_view"
        layout="@layout/motion_view"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <com.swm.stuff.view.TimerView
        android:id="@+id/swm_timer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_record_timer"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/swm_motion_view"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintBottom_toBottomOf="@+id/swm_motion_view"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/swm_motion_view"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.428"
        app:layout_constraintTop_toBottomOf="@+id/swm_record_button" />

    <com.swm.stuff.view.RecordButton
        android:id="@+id/swm_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_record"
        android:background="@drawable/swm_cta_button"
        android:textColor="@color/swm_white"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swm_motion_view"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.832" />

    <RadioGroup
        android:id="@+id/swm_switch_engine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/swm_record_button"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047">

        <com.swm.stuff.view.RadioButton
            android:id="@+id/swm_ecg_mode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/swm_ecg_mode"
            android:textColor="@color/swm_main" />

        <com.swm.stuff.view.RadioButton
            android:id="@+id/swm_motion_mode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_motion_mode"
            android:textColor="@color/swm_main" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
