<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/swm_main"
    >

    <com.swm.stuff.view.StepView
        android:id="@+id/swm_step_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:formatString="@string/swm_my_step"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/swm_white"
        android:textSize="50dp"
        tools:text="1"/>

    <com.swm.stuff.view.JumpView
        android:id="@+id/swm_jump_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/swm_white"
        android:textSize="50dp"
        tools:text="I jump"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/swm_step_view"
        app:layout_constraintVertical_bias="0.104" />
    <com.swm.stuff.view.CalorieView
        android:id="@+id/swm_calorie_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:formatString="@string/swm_my_calorie"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/swm_white"
        android:textSize="30dp"
        tools:text="1.234"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swm_jump_view" />

    <com.swm.stuff.view.LocationView
        android:id="@+id/swm_location_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:formatString="@string/swm_my_location"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/swm_calorie_view"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.343"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/swm_white"
        android:textSize="30dp"
        tools:text="(23.123,123.123)"/>

</android.support.constraint.ConstraintLayout>
